--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.4",
+    "@angular-devkit/build-angular": "^16.1.3",
     "@angular/cli": "^16.1.4",
     "@angular/compiler-cli": "^16.1.3",
     "@types/jasmine": "~4.0.0",
@@ -36,6 +36,7 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^16.1.0",
+    "postcss": "^8.4.25",
     "prettier": "^3.0.0",
     "typescript": "~5.1.6"
   }
