--- a/angular.json
+++ b/angular.json
@@ -23,14 +23,6 @@
             }
           },
           "defaultConfiguration": "production"
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/custom-form-controls/src/test.ts",
-            "tsConfig": "projects/custom-form-controls/tsconfig.spec.json",
-            "karmaConfig": "projects/custom-form-controls/karma.conf.js"
-          }
         }
       }
     },
@@ -54,13 +46,8 @@
             "polyfills": "projects/form-playground/src/polyfills.ts",
             "tsConfig": "projects/form-playground/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "projects/form-playground/src/favicon.ico",
-              "projects/form-playground/src/assets"
-            ],
-            "styles": [
-              "projects/form-playground/src/styles.scss"
-            ],
+            "assets": ["projects/form-playground/src/favicon.ico", "projects/form-playground/src/assets"],
+            "styles": ["projects/form-playground/src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -112,24 +99,6 @@
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "form-playground:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/form-playground/src/test.ts",
-            "polyfills": "projects/form-playground/src/polyfills.ts",
-            "tsConfig": "projects/form-playground/tsconfig.spec.json",
-            "karmaConfig": "projects/form-playground/karma.conf.js",
-            "inlineStyleLanguage": "scss",
-            "assets": [
-              "projects/form-playground/src/favicon.ico",
-              "projects/form-playground/src/assets"
-            ],
-            "styles": [
-              "projects/form-playground/src/styles.scss"
-            ],
-            "scripts": []
           }
         }
       }
