--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "watch-lib": "ng build custom-form-controls --watch --configuration development",
-    "test": "ng test"
+    "test:lib": "jest --config ./projects/custom-form-controls/jest.config.js",
+    "test:showcase": "jest --config ./projects/form-playground/jest.config.js",
+    "test": "npm run test:lib && npm run test:showcase",
+    "test:lib:watch": "jest -o --watch --config ./projects/custom-form-controls/jest.config.js",
+    "test:showcase:watch": "jest -o --watch --config ./projects/form-playground/jest.config.js",
+    "test:lib:coverage": "jest --coverage --config ./projects/custom-form-controls/jest.config.js",
+    "test:showcase:coverage": "jest --coverage --config ./projects/form-playground/jest.config.js"
   },
   "private": true,
   "dependencies": {
@@ -29,11 +35,15 @@
     "@angular/cli": "^16.1.4",
     "@angular/compiler-cli": "^16.1.4",
     "@types/jasmine": "~4.3.5",
+    "@types/jest": "^29.5.2",
     "jasmine-core": "~5.0.1",
+    "jest": "^29.6.1",
+    "jest-preset-angular": "^13.1.1",
     "karma-coverage": "^2.2.1",
     "ng-packagr": "^16.1.0",
     "postcss": "^8.4.25",
     "prettier": "^3.0.0",
+    "ts-jest": "^29.1.1",
     "typescript": "~5.1.6"
   }
 }
