--- a/projects/custom-form-controls/tsconfig.spec.json
+++ b/projects/custom-form-controls/tsconfig.spec.json
@@ -1,9 +1,10 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "../../tsconfig.json",
+  "emitDecoratorMetadata": true,
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
-    "types": []
+    "types": ["jest"]
   },
   "files": [],
   "include": ["**/*.spec.ts", "**/*.d.ts"]
