--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "custom-form-controls": ["dist/custom-form-controls"]
     },
     "outDir": "./dist/out-tsc",
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
