components on the test and updated package

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "watch-lib": "ng build custom-form-controls --watch --configuration development",
-    "test:lib": "jest --config ./projects/custom-form-controls/jest.config.js",
-    "test:showcase": "jest --config ./projects/form-playground/jest.config.js",
+    "test:lib": "jest --detectOpenHandles --config ./projects/custom-form-controls/jest.config.js",
+    "test:showcase": "jest --detectOpenHandles --config ./projects/form-playground/jest.config.js",
     "test": "npm run test:lib && npm run test:showcase",
     "test:lib:watch": "jest -o --watch --config ./projects/custom-form-controls/jest.config.js",
     "test:showcase:watch": "jest -o --watch --config ./projects/form-playground/jest.config.js",
