--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
-    "useDefineForClassFields": true,
+    "useDefineForClassFields": false,
     "module": "es2020",
     "lib": ["es2020", "dom"]
   },
