--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-eslint/schematics": "^16.0.3",
-    "@angular/animations": "^16.1.4",
-    "@angular/common": "^16.1.4",
-    "@angular/compiler": "^16.1.4",
-    "@angular/core": "^16.1.4",
-    "@angular/forms": "^16.1.4",
-    "@angular/platform-browser": "^16.1.4",
-    "@angular/platform-browser-dynamic": "^16.1.4",
-    "@angular/router": "^16.1.4",
+    "@angular-eslint/schematics": "^16.1.0",
+    "@angular/animations": "^16.1.5",
+    "@angular/cdk": "^16.1.5",
+    "@angular/common": "^16.1.5",
+    "@angular/compiler": "^16.1.5",
+    "@angular/core": "^16.1.5",
+    "@angular/forms": "^16.1.5",
+    "@angular/platform-browser": "^16.1.5",
+    "@angular/platform-browser-dynamic": "^16.1.5",
+    "@angular/router": "^16.1.5",
     "rxjs": "~7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.1"
@@ -33,15 +34,15 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/cli": "^16.1.4",
-    "@angular/compiler-cli": "^16.1.4",
+    "@angular/compiler-cli": "^16.1.5",
     "@types/jasmine": "~4.3.5",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.3",
     "jasmine-core": "~5.0.1",
     "jest": "^29.6.1",
     "jest-preset-angular": "^13.1.1",
     "karma-coverage": "^2.2.1",
     "ng-packagr": "^16.1.0",
-    "postcss": "^8.4.25",
+    "postcss": "^8.4.26",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
     "typescript": "~5.1.6"
