--- a/package.json
+++ b/package.json
@@ -42,13 +42,15 @@
     "@angular/compiler-cli": "^16.1.5",
     "@types/jasmine": "~4.3.5",
     "@types/jest": "^29.5.3",
+    "autoprefixer": "^10.4.14",
     "jasmine-core": "~5.0.1",
     "jest": "^29.6.1",
     "jest-preset-angular": "^13.1.1",
     "karma-coverage": "^2.2.1",
     "ng-packagr": "^16.1.0",
-    "postcss": "^8.4.26",
+    "postcss": "^8.4.27",
     "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "~5.1.6"
   }
